@@ -15,6 +15,11 @@
 *******************************************************************************
 
 
+xflr5 v6.39 June xxxth, 2017
+	- implemented a more robust process to save the project files
+	- disabled the Neumann boundary condition for the 3d panel method
+
+
 xflr5 v6.38 June 5th, 2017
 	- fixed the random behaviour bug in the OpenGL view
 
@@ -22,6 +27,7 @@ xflr5 v6.38 June 5th, 2017
 xflr5 v6.37 May 28th, 2017
 	- added a verification of the OpenGL version at startup
 	- fixed two bad crash bugs when derotating a foil and when defining a flap
+
 
 xflr5 v6.36 May 22nd, 2017 - limited release only
 
